# markdowncompiler

./: Cargo.toml  README.md  azure-pipelines.yml  grammar.md  test.md
src/: htmlout.rs  lib.rs  main.rs  parser.rs  scanner.rs
tests/: scanner_tests.rs
